--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -14,7 +14,7 @@ out_dir = "webapp"
 asset_dir = "public"
 
 [web.app]
-base_path = "."
+# base_path = "."
 
 # HTML title tag content
 title = "Crabsburger"
@@ -44,7 +44,8 @@ script = []
 # serve: [dev-server] only
 
 # CSS style file
-style = []
+style = ["/tailwind.css"]
+
 
 # Javascript code file
 script = []
